CRUD classroom and subjects sidemenu

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,6 +15,7 @@
 	"CANCEL": "Cancelar",
 	"CLASSROOM": "Aula",
 	"CLASSROOMS": "Aulas",
+	"CLASSROOM_DELETE": "Borrar aula",
 	"CLOSE_MENU": "Cerrar menú",
 	"CONFIRM_PASSWORD": "Confirmar contraseña",
 	"CONTACT": {
@@ -22,9 +23,18 @@
 		"PHONE": "Teléfono de contacto",
 		"TITLE": "Contacto"
 	},
+	"CREATE_CLASSROOM": "Crear aula",
+	"CREATE_SUBJECT": "Crear asignatura",
 	"DAILY": "Diario",
 	"DELETE": "Borrar",
+	"DELETE_CLASSROOM": "Borrar aula",
+	"DELETE_ELEMENT": "Borrar elemento",
+	"DELETE_SUBJECT": "Borrar asignatura",
+	"EDIT_CLASSROOM": "Editar aula",
+	"EDIT_ELEMENT": "Editar elemento",
+	"EDIT_NAME": "Cambiar nombre",
 	"EDIT_STUDENT": "Editar alumno",
+	"EDIT_SUBJECT": "Editar asignatura",
 	"EMAIL": "Email",
 	"ERR": {
 		"AUTH_INVALID": "Email o contraseña incorrecta",
@@ -44,6 +54,7 @@
 		"ACADEMIC_COURSE": "Curso académico",
 		"AGE": "Edad",
 		"BIRTHDATE": "Fecha de nacimiento",
+		"CLASSROOMS_NAME": "Nombre del aula",
 		"CONSERVATORY_COURSE": "Curso del conservatorio",
 		"CONSERVATORY_TEACHER": "Profesor del conservatorio",
 		"CONTENT": "Registro del día",
@@ -68,8 +79,10 @@
 		"PHONES": "Teléfonos",
 		"PICTURE": "Imagen",
 		"STUDENT": "Alumno",
+		"STUDENT_LIST": "Lista de alumnos",
 		"SUBJECT": "Asignatura",
 		"SUBJECTS": "Asignaturas",
+		"SUBJECTS_NAME": "Nombre de la asignatura",
 		"SURNAME": "Apellidos",
 		"TITLE": "Título"
 	},
@@ -79,6 +92,7 @@
 		"ADD_NEW_PHONE": "Añade un nuevo teléfono",
 		"BIRTHDATE": "Pulse el calendario o escribe la fecha (DD/MM/AAAA)",
 		"CLASSROOM": "Puedes agrupar los alumnos en diferentes aulas",
+		"CLASSROOM_STUDENT_LIST": "Seleccione los alumnos matriculados en este aula",
 		"OBSERVATIONS": "Añade una breve descripción del alumno",
 		"SUBJECTS": "Marque las asignaturas que le impartirá al alumno",
 		"TITLE": "Añade un pequeño título descriptivo."
@@ -124,8 +138,13 @@
 	"MARKS": "Notas",
 	"MSG": {
 		"BYE": "¡Hasta pronto!",
+		"CLASSROOM_CREATE_OK": "Se ha creado el aula correctamente",
+		"CLASSROOM_DELETE": "¿Estás seguro que quieres borrar este aula?",
+		"CLASSROOM_DELETE_OK": "Se ha borrado correctamente el aula",
+		"CLASSROOM_UPDATE_OK": "Aula modificada",
 		"DAY_CREATE_OK": "Se ha creado un nuevo registro",
 		"DAY_DELETE": "¿Estás seguro que quieres borrar este registro?",
+		"DAY_DELETE_OK": "Se ha borrado correctamente el registro",
 		"DAY_UPDATE_OK": "Registro modificado",
 		"LOGOUT": "¿Quieres cerrar la sesión?",
 		"LOGOUT_CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
@@ -136,7 +155,12 @@
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
+		"STUDENT_DELETE_OK": "Se ha borrado correctamente el alumno",
 		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
+		"SUBJECT_CREATE_OK": "Se ha creado la asignatura correctamente",
+		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
+		"SUBJECT_DELETE_OK": "Se ha borrado correctamente la asignatura",
+		"SUBJECT_UPDATE_OK": "Asignatura modificada",
 		"WELCOME": "¡Hola {{name}}!",
 		"YES_ACCOUNT": "¿Ya tienes una cuenta?"
 	},
@@ -179,12 +203,8 @@
 	"STUDENT_DELETE": "Borrar alumno",
 	"STUDENT_PARENTS_DATA": "Padres",
 	"STUDENT_PERSONAL_DATA": "Alumno",
-	"SUBJECT": {
-		"CELLO": "Violonchelo",
-		"LANGUAGE": "Lenguaje musical",
-		"VIOLIN": "Violín"
-	},
 	"SUBJECTS": "Asignaturas",
+	"SUBJECT_DELETE": "Borrar asignatura",
 	"TEACHER": "Profesor",
 	"THEME": "Tema",
 	"THEMING": {
