--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,6 +15,7 @@
 	"CANCEL": "Annuler",
 	"CLASSROOM": "Classe",
 	"CLASSROOMS": "Classes",
+	"CLASSROOM_DELETE": "Supprimer la classe",
 	"CLOSE_MENU": "Fermer le menu",
 	"CONFIRM_PASSWORD": "Confirmer mot de passe",
 	"CONTACT": {
@@ -22,9 +23,18 @@
 		"PHONE": "Téléphone de contact",
 		"TITLE": "Contact"
 	},
+	"CREATE_CLASSROOM": "Créer une salle de classe",
+	"CREATE_SUBJECT": "Créer un sujet",
 	"DAILY": "Tous les jours",
 	"DELETE": "Supprimer",
+	"DELETE_CLASSROOM": "Supprimer la classe",
+	"DELETE_ELEMENT": "Supprimer l'élément",
+	"DELETE_SUBJECT": "Supprimer le sujet",
+	"EDIT_CLASSROOM": "Modifier la classe",
+	"EDIT_ELEMENT": "Modifier l'élément",
+	"EDIT_NAME": "Rebaptiser",
 	"EDIT_STUDENT": "Modifier l'élève",
+	"EDIT_SUBJECT": "Modifier le sujet",
 	"EMAIL": "Email",
 	"ERR": {
 		"AUTH_INVALID": "E-mail ou mot de passe incorrect",
@@ -44,6 +54,7 @@
 		"ACADEMIC_COURSE": "Cours academique",
 		"AGE": "Âge",
 		"BIRTHDATE": "Date de naissance",
+		"CLASSROOMS_NAME": "Nom de la classe",
 		"CONSERVATORY_COURSE": "Cours de Conservatoire",
 		"CONSERVATORY_TEACHER": "Professeur de Conservatoire",
 		"CONTENT": "Record du jour",
@@ -68,8 +79,10 @@
 		"PHONES": "Téléphones",
 		"PICTURE": "Image",
 		"STUDENT": "Étudiant",
+		"STUDENT_LIST": "Liste des étudiants",
 		"SUBJECT": "Objet",
 		"SUBJECTS": "Sujets",
+		"SUBJECTS_NAME": "Nom du sujet",
 		"SURNAME": "Nom de famille",
 		"TITLE": "Titre"
 	},
@@ -79,6 +92,7 @@
 		"ADD_NEW_PHONE": "Ajouter un nouveau téléphone",
 		"BIRTHDATE": "Appuyez sur le calendrier ou entrez la date (JJ/MM/AAAA)",
 		"CLASSROOM": "Vous pouvez regrouper les élèves dans différentes classes",
+		"CLASSROOM_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans cette classe",
 		"OBSERVATIONS": "Ajouter une brève description de l'élève",
 		"SUBJECTS": "Marquez les matières qui seront enseignées à l'élève",
 		"TITLE": "Ajoutez un petit titre descriptif."
@@ -124,8 +138,13 @@
 	"MARKS": "Remarques",
 	"MSG": {
 		"BYE": "À bientôt!",
+		"CLASSROOM_CREATE_OK": "Salle de classe créée avec succès",
+		"CLASSROOM_DELETE": "Voulez-vous vraiment supprimer cette classe?",
+		"CLASSROOM_DELETE_OK": "La salle de classe a été supprimée avec succès",
+		"CLASSROOM_UPDATE_OK": "Salle de classe modifiée",
 		"DAY_CREATE_OK": "Un nouveau record a été créé",
 		"DAY_DELETE": "Voulez-vous vraiment supprimer cet enregistrement?",
+		"DAY_DELETE_OK": "Le registre a été supprimé avec succès",
 		"DAY_UPDATE_OK": "Enregistrement modifié",
 		"LOGOUT": "Voulez-vous vous déconnecter?",
 		"LOGOUT_CONFIRM": "Si vous le faites, nous espérons que vous reviendrez bientôt :)",
@@ -136,7 +155,12 @@
 		"SERVICE_NOT_AVAILABLE": "Ce service sera bientôt disponible",
 		"STUDENT_CREATE_OK": "Un nouvel étudiant s'est inscrit en classe",
 		"STUDENT_DELETE": "Voulez-vous vraiment supprimer cet étudiant?",
+		"STUDENT_DELETE_OK": "L'élève a été supprimé avec succès",
 		"STUDENT_UPDATE_OK": "L'élève a été modifié",
+		"SUBJECT_CREATE_OK": "Le sujet a été créé correctement",
+		"SUBJECT_DELETE": "Voulez-vous vraiment supprimer ce sujet?",
+		"SUBJECT_DELETE_OK": "Le sujet a bien été supprimé",
+		"SUBJECT_UPDATE_OK": "Sujet modifié",
 		"WELCOME": "Salut {{name}}!",
 		"YES_ACCOUNT": "Avez-vous déjà un compte?"
 	},
@@ -179,12 +203,8 @@
 	"STUDENT_DELETE": "Supprimer l'élève",
 	"STUDENT_PARENTS_DATA": "Les pères",
 	"STUDENT_PERSONAL_DATA": "Étudiant",
-	"SUBJECT": {
-		"CELLO": "Violoncelle",
-		"LANGUAGE": "Langage musical",
-		"VIOLIN": "Violon"
-	},
 	"SUBJECTS": "Sujets",
+	"SUBJECT_DELETE": "Supprimer le sujet",
 	"TEACHER": "Enseignant",
 	"THEME": "Thème",
 	"THEMING": {
