--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
 	"CANCEL": "Cancel",
 	"CLASSROOM": "Classroom",
 	"CLASSROOMS": "Classrooms",
+	"CLASSROOM_DELETE": "Delete classroom",
 	"CLOSE_MENU": "Close menu",
 	"CONFIRM_PASSWORD": "Confirm password",
 	"CONTACT": {
@@ -22,9 +23,18 @@
 		"PHONE": "Telephone contact",
 		"TITLE": "Contact"
 	},
+	"CREATE_CLASSROOM": "Create classroom",
+	"CREATE_SUBJECT": "Create subject",
 	"DAILY": "Daily",
 	"DELETE": "Delete",
+	"DELETE_CLASSROOM": "Delete classroom",
+	"DELETE_ELEMENT": "Delete Item",
+	"DELETE_SUBJECT": "Delete subject",
+	"EDIT_CLASSROOM": "Edit Classroom",
+	"EDIT_ELEMENT": "Edit Item",
+	"EDIT_NAME": "Rename",
 	"EDIT_STUDENT": "Edit student",
+	"EDIT_SUBJECT": "Edit subject",
 	"EMAIL": "E-mail",
 	"ERR": {
 		"AUTH_INVALID": "Email or password was not correct",
@@ -44,6 +54,7 @@
 		"ACADEMIC_COURSE": "Academic course",
 		"AGE": "Age",
 		"BIRTHDATE": "Birthdate",
+		"CLASSROOMS_NAME": "Classroom name",
 		"CONSERVATORY_COURSE": "Conservatory Course",
 		"CONSERVATORY_TEACHER": "Conservatory professor",
 		"CONTENT": "Day record",
@@ -68,8 +79,10 @@
 		"PHONES": "Phones",
 		"PICTURE": "Image",
 		"STUDENT": "Student",
+		"STUDENT_LIST": "Student List",
 		"SUBJECT": "Subject",
 		"SUBJECTS": "Subjects",
+		"SUBJECTS_NAME": "Name of the subject",
 		"SURNAME": "Surnames",
 		"TITLE": "Title"
 	},
@@ -79,6 +92,7 @@
 		"ADD_NEW_PHONE": "Add a new phone",
 		"BIRTHDATE": "Press the calendar or enter the date (DD/MM/YYYY)",
 		"CLASSROOM": "You can group students in different classrooms",
+		"CLASSROOM_STUDENT_LIST": "Select the students enrolled in this classroom",
 		"OBSERVATIONS": "Add a brief description of the student",
 		"SUBJECTS": "Mark the subjects that will be taught to the student",
 		"TITLE": "Add a small descriptive title."
@@ -124,8 +138,13 @@
 	"MARKS": "Notes",
 	"MSG": {
 		"BYE": "See you soon!",
+		"CLASSROOM_CREATE_OK": "Classroom created successfully",
+		"CLASSROOM_DELETE": "Are you sure you want to delete this classroom?",
+		"CLASSROOM_DELETE_OK": "Classroom has been deleted successfully",
+		"CLASSROOM_UPDATE_OK": "Modified classroom",
 		"DAY_CREATE_OK": "A new record has been created",
 		"DAY_DELETE": "Are you sure you want to delete this record?",
+		"DAY_DELETE_OK": "Registry has been deleted successfully",
 		"DAY_UPDATE_OK": "Modified Record",
 		"LOGOUT": "Do you want to log out?",
 		"LOGOUT_CONFIRM": "If you do we hope you come back soon :)",
@@ -136,7 +155,12 @@
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_CREATE_OK": "A new student has signed up for class",
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
+		"STUDENT_DELETE_OK": "The student has been successfully deleted",
 		"STUDENT_UPDATE_OK": "The student has been modified",
+		"SUBJECT_CREATE_OK": "The subject has been created correctly",
+		"SUBJECT_DELETE": "Are you sure you want to delete this subject?",
+		"SUBJECT_DELETE_OK": "The subject has been successfully deleted",
+		"SUBJECT_UPDATE_OK": "Subject modified",
 		"WELCOME": "Hi {{name}}!",
 		"YES_ACCOUNT": "Do you already have an account?"
 	},
@@ -179,12 +203,8 @@
 	"STUDENT_DELETE": "Delete student",
 	"STUDENT_PARENTS_DATA": "Parents",
 	"STUDENT_PERSONAL_DATA": "Student",
-	"SUBJECT": {
-		"CELLO": "Cello",
-		"LANGUAGE": "Musical language",
-		"VIOLIN": "Fiddle"
-	},
 	"SUBJECTS": "Subjects",
+	"SUBJECT_DELETE": "Delete subject",
 	"TEACHER": "Teacher",
 	"THEME": "Theme",
 	"THEMING": {
