--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -137,6 +137,7 @@
 	"LANGUAGE": "Language",
 	"MARKS": "Notes",
 	"MSG": {
+		"APP_UPDATED": "The application has been updated with new features",
 		"BYE": "See you soon!",
 		"CLASSROOM_CREATE_OK": "Classroom created successfully",
 		"CLASSROOM_DELETE": "Are you sure you want to delete this classroom?",
