Show group list if search inside

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -163,12 +163,12 @@
 		"RELOAD_PAGE_FOR_CHANGES": "Recarga la página para que los cambios surtan efecto",
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
-		"STUDENT_ARCHIVED_OK": "Estudiante archivado correctamente",
+		"STUDENT_ARCHIVED_OK": "Alumno archivado correctamente",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
 		"STUDENT_DELETE_OK": "Se ha borrado correctamente el alumno",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
-		"STUDENT_UNARCHIVED_OK": "Estudiante desarchivado correctamente",
+		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
 		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
 		"SUBJECT_CREATE_OK": "Se ha creado la asignatura correctamente",
 		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
@@ -194,7 +194,7 @@
 	"RESET": "Reiniciar",
 	"RESET_EMAIL": "Reiniciar campo de correo electrónico",
 	"RESET_FILTER": "Reiniciar filtro",
-	"REST_STUDENTS": "Demás estudiantes",
+	"REST_STUDENTS": "Demás alumnos",
 	"SAVE": "Guardar",
 	"SEARCH_STUDENT": "Buscar alumno",
 	"SELECT": "Seleccionar",
