--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,13 +44,16 @@
 	"EMAIL": "E-mail",
 	"ERR": {
 		"AUTH_INVALID": "Email or password was not correct",
+		"CLASSROOM_EXISTS": "There is already a classroom with the same name",
 		"CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
 		"CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
 		"EMAIL_ALREADY_IN_USE": "This email is already being used",
 		"EMAIL_INVALID": "Please enter a valid email",
 		"EMAIL_REQUIRED": "Email is required",
+		"FIELD_REQUIRED": "This field is required",
 		"PASSWORD_INVALID": "The password must be at least 6 characters",
 		"PASSWORD_REQUIRED": "Password is required",
+		"SUBJECT_EXISTS": "There is already a subject with the same name",
 		"UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later.",
 		"USER_NOT_FOUND": "User not found"
 	},
