Subjects and classrooms recursive OK

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -105,6 +105,7 @@
 		"CLASSROOM_STUDENT_LIST": "Wählen Sie die Schüler aus, die in diesem Klassenzimmer eingeschrieben sind",
 		"OBSERVATIONS": "Fügen Sie eine kurze Beschreibung des Schülers hinzu",
 		"SUBJECTS": "Markieren Sie die Fächer, die dem Schüler beigebracht werden",
+		"SUBJECT_STUDENT_LIST": "Wählen Sie die in diesem Fach eingeschriebenen Schüler aus",
 		"TITLE": "Fügen Sie einen kleinen beschreibenden Titel hinzu."
 	},
 	"INSTRUMENT": {
