--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -105,6 +105,7 @@
 		"CLASSROOM_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans cette classe",
 		"OBSERVATIONS": "Ajouter une brève description de l'élève",
 		"SUBJECTS": "Marquez les matières qui seront enseignées à l'élève",
+		"SUBJECT_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans ce sujet",
 		"TITLE": "Ajoutez un petit titre descriptif."
 	},
 	"INSTRUMENT": {
