--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -105,6 +105,7 @@
 		"CLASSROOM_STUDENT_LIST": "Seleziona gli studenti iscritti in questa classe",
 		"OBSERVATIONS": "Aggiungi una breve descrizione dello studente",
 		"SUBJECTS": "Segna le materie che verranno insegnate allo studente",
+		"SUBJECT_STUDENT_LIST": "Seleziona gli studenti iscritti a questa materia",
 		"TITLE": "Aggiungi un piccolo titolo descrittivo."
 	},
 	"INSTRUMENT": {
