Add SignOut In SideMenu

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -190,6 +190,7 @@
 	"PHONE_MENU": "Telefone",
 	"PICKUP_IMAGE": "Wähle einen Avatar aus",
 	"PREVIOUS": "Zurück",
+	"PROFILE": "Profil",
 	"PROP": {
 		"LABEL": "Label",
 		"LABEL_NO": "Kein Tag",
