--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -190,6 +190,7 @@
 	"PHONE_MENU": "Phones",
 	"PICKUP_IMAGE": "Select an avatar",
 	"PREVIOUS": "Previous",
+	"PROFILE": "Profile",
 	"PROP": {
 		"LABEL": "Label",
 		"LABEL_NO": "No tag",
