--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -190,6 +190,7 @@
 	"PHONE_MENU": "Teléfonos",
 	"PICKUP_IMAGE": "Selecciona un avatar",
 	"PREVIOUS": "Anterior",
+	"PROFILE": "Perfil",
 	"PROP": {
 		"LABEL": "Etiqueta",
 		"LABEL_NO": "Sin etiqueta",
