--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -190,6 +190,7 @@
 	"PHONE_MENU": "Téléphones",
 	"PICKUP_IMAGE": "Sélectionnez un avatar",
 	"PREVIOUS": "Précédent",
+	"PROFILE": "Profil",
 	"PROP": {
 		"LABEL": "Étiquette",
 		"LABEL_NO": "Pas de balise",
