--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -190,6 +190,7 @@
 	"PHONE_MENU": "Telefoni",
 	"PICKUP_IMAGE": "Seleziona un avatar",
 	"PREVIOUS": "Precedente",
+	"PROFILE": "Profilo",
 	"PROP": {
 		"LABEL": "Etichetta",
 		"LABEL_NO": "Nessun tag",
