--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -158,6 +158,7 @@
 		"DAY_DELETE": "Are you sure you want to delete this record?",
 		"DAY_DELETE_OK": "Registry has been deleted successfully",
 		"DAY_NOT_EXIST": "This record does not exist",
+		"DAY_STUDENT_ARCHIVED": "You cannot create records of an archived student. Unarchive it first",
 		"DAY_UPDATE_OK": "Modified Record",
 		"LOGOUT": "Do you want to log out?",
 		"LOGOUT_CONFIRM": "If you do we hope you come back soon :)",
