--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -158,6 +158,7 @@
 		"DAY_DELETE": "¿Estás seguro que quieres borrar este registro?",
 		"DAY_DELETE_OK": "Se ha borrado correctamente el registro",
 		"DAY_NOT_EXIST": "Este registro no existe",
+		"DAY_STUDENT_ARCHIVED": "No puedes crear registros de un alumno archivado. Desarchívalo primero",
 		"DAY_UPDATE_OK": "Registro modificado",
 		"LOGOUT": "¿Quieres cerrar la sesión?",
 		"LOGOUT_CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
