--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -158,6 +158,7 @@
 		"DAY_DELETE": "Sei sicuro di voler eliminare questo record?",
 		"DAY_DELETE_OK": "Il registro è stato cancellato con successo",
 		"DAY_NOT_EXIST": "Questo record non esiste",
+		"DAY_STUDENT_ARCHIVED": "Non è possibile creare record di uno studente archiviato. Scaricalo prima",
 		"DAY_UPDATE_OK": "Record modificato",
 		"LOGOUT": "Vuoi uscire?",
 		"LOGOUT_CONFIRM": "Se lo fai, speriamo che torni presto :)",
